--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./favicon.png" sizes="24x24" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.png" sizes="24x24" />
     <meta
       name="description"
       content="I enjoy creating frontend solutions with solid foundations, scalability, and excellent user experiences."
@@ -11,6 +11,8 @@
       name="keywords"
       content="Victor Olatunji, VickyJay, Victorola-coder, Vickyjaydev, Software engineer, Creative Frontend developer, Portfolio, vickyjay.dev"
     />
+    <meta property="og:image" content="" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
