installed react-router-dom

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.png" sizes="24x24" />
+    <!-- <link rel="icon" type="image/svg+xml" href="./src/assets/images/favicon.png" sizes="24x24" /> -->
     <meta
       name="description"
       content="I enjoy creating frontend solutions with solid foundations, scalability, and excellent user experiences."
