portfolo section init

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     />
     <title>VickyJay || Victor</title>
   </head>
-  <body class="lg:bg-blue-950s md:bg-red-300s bg-yellow-400s">
+  <body class="lg:bg-blue-950 md:bg-red-300 bg-yellow-400">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
