--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
-    <title>VickyJay || Victor</title>
+    <title>Victor || VickyJay - Creative Frontend Engineer</title>
   </head>
   <body class="lg:bg-blue-950 md:bg-red-300 bg-yellow-400">
     <noscript>You need to enable JavaScript to run this app.</noscript>
