--- a/index.html
+++ b/index.html
@@ -12,10 +12,28 @@
       name="keywords"
       content="Victor Olatunji, VickyJay, Victorola-coder, Vickyjaydev, Software engineer, Creative Frontend developer, Portfolio, vickyjay.dev"
     />
-    <meta property="og:image" content="" />
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Victor || VickyJay - Creative Frontend Engineer"
+    />
+    <meta
+      property="og:description"
+      content="I enjoy creating frontend
+    solutions with solid foundations, scalability, and excellent user
+    experiences."
+    />
+    <meta
+      property="og:image"
+      content="https://res.cloudinary.com/dkoe20rzl/image/upload/v1692130992/cover_xhnhes.png"
+    />
+    <!-- <meta
+      property="og:image"
+      content="https://res.cloudinary.com/dkoe20rzl/image/upload/v1692130992/cover_xhnhes.png"
+    /> -->
+    <meta property="og:url" content="https://vickyjay.vercel.app" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
