--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     />
     <!-- <meta
       property="og:image"
-      content="https://res.cloudinary.com/dkoe20rzl/image/upload/v1692130992/cover_xhnhes.png"
+      content="https://vickyjay.vercel.app/src/assets/images/cover.png"
     /> -->
     <meta property="og:url" content="https://vickyjay.vercel.app" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
