add open graph image

--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!-- HTML Meta Tags -->
+    <title>Victor || VickyJay - Creative Frontend Engineer</title>
+    <meta
+      name="description"
+      content="I enjoy creating frontend
+    solutions with solid foundations, scalability, and excellent user
+    experiences."
+    />
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://vickyjay.vercel.app" />
     <meta property="og:type" content="website" />
     <meta
       property="og:title"
@@ -29,11 +40,28 @@
       property="og:image"
       content="https://res.cloudinary.com/dkoe20rzl/image/upload/v1692130992/cover_xhnhes.png"
     />
-    <!-- <meta
-      property="og:image"
-      content="https://vickyjay.vercel.app/src/assets/images/cover.png"
-    /> -->
-    <meta property="og:url" content="https://vickyjay.vercel.app" />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="vickyjay.vercel.app" />
+    <meta property="twitter:url" content="https://vickyjay.vercel.app" />
+    <meta
+      name="twitter:title"
+      content="Victor || VickyJay - Creative Frontend Engineer"
+    />
+    <meta
+      name="twitter:description"
+      content="I enjoy creating frontend
+    solutions with solid foundations, scalability, and excellent user
+    experiences."
+    />
+    <meta
+      name="twitter:image"
+      content="https://res.cloudinary.com/dkoe20rzl/image/upload/v1692130992/cover_xhnhes.png"
+    />
+
+    <!-- Meta Tags Generated via https://www.opengraph.xyz -->
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
