[fix] fonts and styles shits

--- a/index.html
+++ b/index.html
@@ -71,23 +71,23 @@
     <script type="module" src="/src/main.jsx"></script>
     <script>
       if (
-        localStorage.theme === "dark" ||
-        (!("theme" in localStorage) &&
-          window.matchMedia("(prefers-color-scheme: dark)").matches)
+        localStorage.theme === 'dark' ||
+        (!('theme' in localStorage) &&
+          window.matchMedia('(prefers-color-scheme: dark)').matches)
       ) {
-        document.documentElement.classList.add("dark");
+        document.documentElement.classList.add('dark');
       } else {
-        document.documentElement.classList.remove("dark");
+        document.documentElement.classList.remove('dark');
       }
 
       // Whenever the user explicitly chooses light mode
-      localStorage.theme = "light";
+      localStorage.theme = 'light';
 
       // Whenever the user explicitly chooses dark mode
-      localStorage.theme = "dark";
+      localStorage.theme = 'dark';
 
       // Whenever the user explicitly chooses to respect the OS preference
-      localStorage.removeItem("theme");
+      localStorage.removeItem('theme');
     </script>
   </body>
 </html>
