--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Facebook Meta Tags -->
-    <meta property="og:url" content="https://vickyjay.vercel.app" />
+    <meta property="og:url" content="https://victorola.dev" />
     <meta property="og:type" content="website" />
     <meta
       property="og:title"
@@ -34,8 +34,8 @@
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta property="twitter:domain" content="vickyjay.vercel.app" />
-    <meta property="twitter:url" content="https://vickyjay.vercel.app" />
+    <meta property="twitter:domain" content="victorola.dev" />
+    <meta property="twitter:url" content="https://victorola.dev" />
     <meta
       name="twitter:title"
       content="Victor || VickyJay - Creative Frontend Engineer"
